--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -11,4 +11,8 @@
         <Compile Include="Proc.fs"/>
     </ItemGroup>
 
+    <ItemGroup>
+        <PackageReference Include="FSharpx.Collections" Version="3.1.0"/>
+    </ItemGroup>
+
 </Project>
