--- a/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
+++ b/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
@@ -9,11 +9,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Tests.fs" />
-        <Compile Include="Program.fs" />
+        <Compile Include="Tests.fs"/>
+        <Compile Include="Program.fs"/>
     </ItemGroup>
 
     <ItemGroup>
+        <PackageReference Include="FSharpx.Collections" Version="3.1.0"/>
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.5.0"/>
         <PackageReference Include="xunit" Version="2.4.2"/>
         <PackageReference Include="xunit.runner.visualstudio" Version="2.4.5">
@@ -27,7 +28,7 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\CSP.Core\CSP.Core.fsproj" />
+        <ProjectReference Include="..\..\src\CSP.Core\CSP.Core.fsproj"/>
     </ItemGroup>
 
 </Project>
