--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -7,6 +7,7 @@
 
     <ItemGroup>
         <Compile Include="Val.fs" />
+        <Compile Include="Type.fs" />
         <Compile Include="Env.fs" />
         <Compile Include="Expr.fs" />
         <Compile Include="Event.fs" />
