--- a/src/CSP.Model.GHApp.Graphviz/CSP.Model.GHApp.Graphviz.fsproj
+++ b/src/CSP.Model.GHApp.Graphviz/CSP.Model.GHApp.Graphviz.fsproj
@@ -3,14 +3,16 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
+        <RootNamespace>CSP.Graphviz</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Program.fs"/>
+        <Compile Include="Program.fs" />
     </ItemGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CSP.Core\CSP.Core.fsproj"/>
+        <ProjectReference Include="..\CSP.Core\CSP.Core.fsproj" />
+        <ProjectReference Include="..\CSP.Model.GHApp\CSP.Model.GHApp.fsproj" />
     </ItemGroup>
 
 </Project>
