--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -6,20 +6,23 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Type.fs"/>
-        <Compile Include="Val.fs"/>
-        <Compile Include="Env.fs"/>
-        <Compile Include="Expr.fs"/>
-        <Compile Include="Proc.fs"/>
-        <Compile Include="ProcMap.fs"/>
-        <Compile Include="State.fs"/>
-        <Compile Include="Trans.fs"/>
-        <Compile Include="Search.fs"/>
-        <Compile Include="Graph.fs"/>
+        <Compile Include="Type.fs" />
+        <Compile Include="Ctor.fs" />
+        <Compile Include="Val.fs" />
+        <Compile Include="Env.fs" />
+        <Compile Include="CtorMap.fs" />
+        <Compile Include="Expr.fs" />
+        <Compile Include="Proc.fs" />
+        <Compile Include="TypeCstr.fs" />
+        <Compile Include="ProcMap.fs" />
+        <Compile Include="State.fs" />
+        <Compile Include="Trans.fs" />
+        <Compile Include="Search.fs" />
+        <Compile Include="Graph.fs" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="FSharpx.Collections" Version="3.1.0"/>
+        <PackageReference Include="FSharpx.Collections" Version="3.1.0" />
     </ItemGroup>
 
 </Project>
