--- a/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
+++ b/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
@@ -10,6 +10,7 @@
 
     <ItemGroup>
         <Compile Include="GraphTests.fs" />
+        <Compile Include="TypeCstrTest.fs" />
         <Compile Include="SearchTests.fs" />
         <Compile Include="ExprTests.fs" />
         <Compile Include="Program.fs" />
@@ -31,6 +32,7 @@
 
     <ItemGroup>
         <ProjectReference Include="..\..\src\CSP.Core\CSP.Core.fsproj" />
+        <ProjectReference Include="..\CSP.Core.TestUtil\CSP.Core.TestUtil.fsproj" />
     </ItemGroup>
 
 </Project>
