--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -6,19 +6,25 @@
     </PropertyGroup>
 
     <ItemGroup>
+        <Compile Include="LineNum.fs" />
+        <Compile Include="Search.fs" />
+        <Compile Include="Range.fs" />
         <Compile Include="Type.fs" />
         <Compile Include="Ctor.fs" />
-        <Compile Include="Val.fs" />
-        <Compile Include="Event.fs" />
-        <Compile Include="Env.fs" />
         <Compile Include="CtorMap.fs" />
+        <Compile Include="Val.fs" />
+        <Compile Include="Var.fs" />
+        <Compile Include="Env.fs" />
         <Compile Include="Expr.fs" />
         <Compile Include="Proc.fs" />
-        <Compile Include="TypeCstr.fs" />
         <Compile Include="ProcMap.fs" />
+        <Compile Include="TypeCstr.fs" />
+        <Compile Include="TypeEnv.fs" />
+        <Compile Include="TypedExpr.fs" />
+        <Compile Include="TypeInfer.fs" />
         <Compile Include="State.fs" />
+        <Compile Include="Event.fs" />
         <Compile Include="Trans.fs" />
-        <Compile Include="Search.fs" />
         <Compile Include="Graph.fs" />
     </ItemGroup>
 
