--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -7,20 +7,22 @@
 
     <ItemGroup>
         <Compile Include="LineNum.fs" />
+        <Compile Include="Indent.fs" />
         <Compile Include="Search.fs" />
         <Compile Include="Range.fs" />
+        <Compile Include="Var.fs" />
         <Compile Include="Type.fs" />
+        <Compile Include="TypeCstr.fs" />
         <Compile Include="Ctor.fs" />
         <Compile Include="CtorMap.fs" />
         <Compile Include="Val.fs" />
-        <Compile Include="Var.fs" />
         <Compile Include="Env.fs" />
         <Compile Include="Expr.fs" />
+        <Compile Include="ExprShorthand.fs" />
         <Compile Include="Proc.fs" />
+        <Compile Include="ProcShorthand.fs" />
         <Compile Include="ProcMap.fs" />
-        <Compile Include="TypeCstr.fs" />
         <Compile Include="TypeEnv.fs" />
-        <Compile Include="TypedExpr.fs" />
         <Compile Include="TypeInfer.fs" />
         <Compile Include="State.fs" />
         <Compile Include="Event.fs" />
