Fix several bugs

--- a/src/CSP.Core.Util/CSP.Core.Util.fsproj
+++ b/src/CSP.Core.Util/CSP.Core.Util.fsproj
@@ -8,6 +8,7 @@
     <ItemGroup>
         <Compile Include="Range.fs" />
         <Compile Include="ListEx.fs" />
+        <Compile Include="MapEx.fs" />
         <Compile Include="Univ.fs" />
     </ItemGroup>
 
