--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -34,9 +34,10 @@
         <Compile Include="Proc.fs" />
         <Compile Include="ProcShorthand.fs" />
         <Compile Include="ProcMap.fs" />
-        <Compile Include="TypeEnv.fs" />
         <Compile Include="TypeCstr.fs" />
+        <Compile Include="TypeCstrShorthand.fs" />
         <Compile Include="TypeCstrUncertainVar.fs" />
+        <Compile Include="TypeEnv.fs" />
         <Compile Include="TypeInfer.fs" />
         <Compile Include="State.fs" />
         <Compile Include="Event.fs" />
