--- a/src/CSP.Core.TypeCheck/CSP.Core.TypeCheck.fsproj
+++ b/src/CSP.Core.TypeCheck/CSP.Core.TypeCheck.fsproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
+        <RootNamespace>CSP.Core.TypeInference</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
@@ -18,6 +19,7 @@
         <Compile Include="TypeCstrUnification.fs" />
         <Compile Include="ExprTypeInference.fs" />
         <Compile Include="ProcTypeInference.fs" />
+        <Compile Include="ProcMapTypeInference.fs" />
     </ItemGroup>
 
     <ItemGroup>
