--- a/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
+++ b/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
@@ -6,6 +6,7 @@
         <IsPackable>false</IsPackable>
         <GenerateProgramFile>false</GenerateProgramFile>
         <IsTestProject>true</IsTestProject>
+        <RootNamespace>CSP.Core.Tests</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
