--- a/src/CSP.Core.Visualization/CSP.Core.Visualization.fsproj
+++ b/src/CSP.Core.Visualization/CSP.Core.Visualization.fsproj
@@ -6,7 +6,7 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <Compile Include="Graph.fs" />
+        <Compile Include="DotLang.fs" />
     </ItemGroup>
 
     <ItemGroup>
