--- a/src/CSP.Model.GHApp.Graphviz/CSP.Model.GHApp.Graphviz.fsproj
+++ b/src/CSP.Model.GHApp.Graphviz/CSP.Model.GHApp.Graphviz.fsproj
@@ -11,6 +11,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\CSP.Core.Visualization\CSP.Core.Visualization.fsproj" />
         <ProjectReference Include="..\CSP.Core\CSP.Core.fsproj" />
         <ProjectReference Include="..\CSP.Model.GHApp\CSP.Model.GHApp.fsproj" />
     </ItemGroup>
