--- a/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
+++ b/tests/CSP.Core.Tests/CSP.Core.Tests.fsproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <Compile Include="SearchTests.fs" />
+        <Compile Include="UnivTest.fs" />
         <Compile Include="Program.fs" />
     </ItemGroup>
 
