Type annotation for ProcMap

--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -32,6 +32,7 @@
         <Compile Include="Expr.fs" />
         <Compile Include="ExprShorthand.fs" />
         <Compile Include="EvalError.fs" />
+        <Compile Include="ValTypeCheck.fs" />
         <Compile Include="Eval.fs" />
         <Compile Include="Proc.fs" />
         <Compile Include="ProcShorthand.fs" />
