--- a/src/CSP.Core/CSP.Core.fsproj
+++ b/src/CSP.Core/CSP.Core.fsproj
@@ -13,8 +13,10 @@
         <Compile Include="Ctor.fs"/>
         <Compile Include="Type.fs"/>
         <Compile Include="TypeShorthand.fs"/>
-        <Compile Include="CtorMapError.fs"/>
-        <Compile Include="CtorMap.fs"/>
+        <Compile Include="UnionMapError.fs" />
+        <Compile Include="UnionMap.fs" />
+        <Compile Include="CtorMapError.fs" />
+        <Compile Include="CtorMap.fs" />
         <Compile Include="Val.fs"/>
         <Compile Include="ValShorthand.fs"/>
         <Compile Include="ClassEq.fs"/>
