--- a/src/CSP.Core.TypeCheck/CSP.Core.TypeCheck.fsproj
+++ b/src/CSP.Core.TypeCheck/CSP.Core.TypeCheck.fsproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <RootNamespace>CSP.Core.TypeInference</RootNamespace>
+        <RootNamespace>CSP.Core</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
