--- a/src/CSP.Core.Sexp/CSP.Core.Sexp.fsproj
+++ b/src/CSP.Core.Sexp/CSP.Core.Sexp.fsproj
@@ -9,8 +9,18 @@
         <Compile Include="SyntaxError.fs" />
         <Compile Include="Sexp.fs" />
         <Compile Include="SexpParser.fs" />
-        <Compile Include="ExprParser.fs" />
+        <Compile Include="MapperError.fs" />
+        <Compile Include="Mapper.fs" />
+        <Compile Include="TypeSyntaxError.fs" />
         <Compile Include="TypeParser.fs" />
+        <Compile Include="ExprSyntaxError.fs" />
+        <Compile Include="ExprParser.fs" />
+        <Compile Include="ProcSyntaxError.fs" />
+        <Compile Include="ProcParser.fs" />
+        <Compile Include="Stmt.fs" />
+        <Compile Include="StmtSyntaxError.fs" />
+        <Compile Include="StmtParser.fs" />
+        <Compile Include="ProgramSyntaxError.fs" />
         <Compile Include="ProgramParser.fs" />
     </ItemGroup>
 
