Impl Exe but not tested

--- a/src/CSP.Core.Interpreter/CSP.Core.Interpreter.fsproj
+++ b/src/CSP.Core.Interpreter/CSP.Core.Interpreter.fsproj
@@ -3,19 +3,18 @@
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <GenerateDocumentationFile>true</GenerateDocumentationFile>
-        <RootNamespace>CSP.CLI</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-        <ProjectReference Include="..\CSP.Core\CSP.Core.fsproj"/>
+        <Compile Include="Interpreter.fs" />
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="FSharpPlus" Version="1.4.1"/>
+      <PackageReference Include="FSharpPlus" Version="1.4.1" />
     </ItemGroup>
 
     <ItemGroup>
-      <Compile Include="ArgParser.fs" />
+      <ProjectReference Include="..\CSP.Core\CSP.Core.fsproj" />
     </ItemGroup>
 
 </Project>
